apps/base/jellystat/jellystat-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellystat
  labels:
    name: jellystat
