apps/base/jellystat/jellystat-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellystat-ingressroute
  namespace: jellystat
  annotations:
    gethomepage.dev/href: "https://jellystat.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellystat"
    gethomepage.dev/description: "Jellyfin statistics and analytics"
    gethomepage.dev/app: jellystat
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/jellyfin.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`jellystat.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: jellystat
          port: 3000
